k8s/config/homepage/feed/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirectscheme-http
  namespace: homepage
spec:
  redirectScheme:
    port: "8000"
    scheme: http
