k8s/config/homepage/feed/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: feed
  namespace: homepage
spec:
  externalName: 192.168.0.144
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  type: ExternalName
