k8s/config/homepage/feed/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: feed
  namespace: feed
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Feed
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`feed.rafaelbroseghini.com`)
      services:
        - name: feed
          port: 8080
      middlewares:
      - name: redirectscheme-http
  tls:
    secretName: rafaelbroseghini-cert
